1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4 (ffilibdir): New substituted variable.  Use
	'-I${ffidir}/include' instead of $ffidir/includ.

	* acfind.m4 (md_FIND_LIB): Use -R instead of -rpath.

	* acffi.m4 (md_FIND_FFI): Likewise.

	* actcltk.m4 (md_FIND_TCL_LIBRARIES, md_FIND_TK_LIBRARIES): Likewise.

1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Assign java include directories
	to JAVAINCLUDES.

1999-03-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Define HAVE_JDK if jdkdir is found to be valid.

1999-03-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Don't abort if JDK not found.
	Abort if $jdkdir is specified (but not `no') and
	$jdkdir/include/jni.h doesn't exist.

1999-03-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Set JAVAC if javac is missing, and jdkdir is not.
	Likewise for jar.

	* Makefile.am (EXTRA_DIST): Add acwarnflags.m4.

	* acwarnflags.m4: New file.

1999-03-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_DISABLE_JAVA): Remove.
	(vj_FIND_JDK): Clear jdkdir if "no" (use empty
	jdkdir as enable/disable flag).  Add messages.
	Set JAVASTUBS to "stubs" when jdkdir is set, otherwise empty.
	Substitute JAVASTUBS.

1999-03-05  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acjdk.m4 to EXTRA_DIST.

	* acjdk.m4: New file.
	(vj_FIND_JDK): Locates JDK through javac path.
	(vj_DISABLE_JAVA): Parsing of --enable-java and --disable-java.

1999-03-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acobjclibs.m4 (md_CHECK_OBJC_LIBS): Add "-x none" after
	filename.  With Checker, there is an object file added, which
	must not be compiled.

1999-02-15  Alex Lancaster  <alex@santafe.edu>

	* acffi.m4 (md_FIND_FFI): Reverse order of test - look in $ffidir
	before looking in `/usr'.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (md_FIND_TCLTK_SCRIPTS): Test $_prefix/share as